@@ -27,4 +27,3 @@
   consistent in some way (closed=1, success=0, error=-1)
 - weed is not doing its jobs, check domains
 - better website
-- IMAP CRAM-MD5
