@@ -1,8 +1,12 @@
-01 August 2007
+02 August 2007
 
+* Handle IMAP mails properly if they have no trailing newline.
 * Use APOP for POP3 or CRAM-MD5 for IMAP if offered by server. Note that fdm
   currently does NOT fall back to plaintext auth if the server offers APOP
   or CRAM-MD5 but it doesn't work.
+
+01 August 2007
+
 * fdm 1.3c released.
 * Wrong size for match buffer in pcre.c. SF.net bug 1765524.
 * Try to buffer as much as possible when reading, this prevents problems since
@@ -503,4 +507,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.133 2007-08-02 11:09:24 nicm Exp $
+$Id: CHANGES,v 1.134 2007-08-02 13:13:35 nicm Exp $
